# Data_Structures

./: .gitignore  CMakeLists.txt  README.md
Assignments/: Assignment1.c
Labs/: Lab1.c
Week 1/: Lab1.c
Week 10/: hashLab.c
Week 10/Assignment 10/: hash.c  hash.h  hash_main.c
Week 2/Assignment 2/: dynamicArray.c  dynamicArray.h  dynamicArrayW2.c  dynamicArrayW2.h  testDynArray.c
Week 2/Lab 2/: dynArr.c  dynArr.h  testDynArr.c
Week 3/: Lab3.c
Week 3/Assignment 3/: listbag.c  listbag.h  main_bag.c
Week 4/Assignment 4/: cirList.c  cirList.h  main_cirList.c
Week 4/Lab 4/: deque.c  deque.h  main_deque.c
Week 5/: lab5.c
Week 5/Assignment 5/: skipList.c  skipList.h  skipList_main.c
Week 6/Assignment 6/: bst.c  bst.h  main_bst.c
Week 6/Lab 6/: BST.c  BST.h  main_BST.c
Week 8/: lab8.c
Week 8/Assignment 8/: dynamicArray.c  dynamicArray.h  main_heap.c
